Add keyboard events

--- a/examples/benchmark/index.html
+++ b/examples/benchmark/index.html
@@ -3,6 +3,6 @@
     
   </head>
   <body>
-    <canvas id="canvas" style="width: 800px; height: 600px; background: gray"></canvas>
+    <canvas id="canvas" tabindex='1' style="width: 800px; height: 600px; background: gray"></canvas>
   </body>
 </html>
