Fix canvas size

--- a/examples/benchmark/index.html
+++ b/examples/benchmark/index.html
@@ -3,6 +3,6 @@
     
   </head>
   <body>
-    <canvas id="canvas" tabindex='1' width='800' height='600' style="width: 800px; height: 600px; background: black"></canvas>
+    <canvas id="canvas" tabindex='1' style="display: block; width: 80%; margin: 0 auto; aspect-ratio: 16 / 9; background: black"></canvas>
   </body>
 </html>
