Improve assets building

--- a/examples/benchmark/index.html
+++ b/examples/benchmark/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link data-trunk rel="copy-file" href="./target/assets.zip"/>
+    <link data-trunk rel="copy-dir" href="./data/"/>
   </head>
   <body>
     <canvas id="canvas" tabindex='1' style="display: block; width: 80%; margin: 0 auto; aspect-ratio: 16 / 9; background: black"></canvas>
